tests/expected_invalid_generic_record_construct_wrong_arity.diag.out
<input>:9:5: error: generic record 'Box' expects 1 type argument(s), got 2
        support::Box<Int, Text> { value: 7 }.value
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
